@@ -1,6 +1,6 @@
 Package: effects
 Version: 2.0-0
-Date: 2008/09/30
+Date: 2008/10/02
 Title: Effect Displays for Linear, Generalized Linear, Multinomial-Logit, and Proportional-Odds Logit Models
 Author: John Fox <jfox@mcmaster.ca> and Jangman Hong. We are grateful to Robert Andersen, David Firth, and 
   Michael Friendly, for various suggestions.
