@@ -67,3 +67,5 @@ Version 2.0-0
 o Jangman Hong joins project.
 
 o support added for multinomial and proportional-odds logit models, as fit by multinom() (in nnet package) and polr() (in MASS) package, following results in Fox and Andersen (2006).
+
+o added the argument given.values to effect() methods for finer-grain control of displays.
